Add Mentors section with 5 mentor placeholders before Leadership section

--- a/team.html
+++ b/team.html
@@ -39,6 +39,67 @@
     <!-- Team Section -->
     <section class="team-section">
         <div class="container">
+            <!-- Mentors -->
+            <div class="team-category">
+                <h2>Mentors</h2>
+                <div class="team-grid">
+                    <!-- Mentor 1 -->
+                    <div class="team-card">
+                        <div class="team-image">
+                            <div class="image-placeholder">👨‍🏫</div>
+                        </div>
+                        <h3>Mentor Name 1</h3>
+                        <p class="team-role">Specialization 1</p>
+                        <p class="team-bio">Short description about mentor 1</p>
+                        <p class="team-contact">📧 mentor1@culko.in</p>
+                    </div>
+
+                    <!-- Mentor 2 -->
+                    <div class="team-card">
+                        <div class="team-image">
+                            <div class="image-placeholder">👩‍🏫</div>
+                        </div>
+                        <h3>Mentor Name 2</h3>
+                        <p class="team-role">Specialization 2</p>
+                        <p class="team-bio">Short description about mentor 2</p>
+                        <p class="team-contact">📧 mentor2@culko.in</p>
+                    </div>
+
+                    <!-- Mentor 3 -->
+                    <div class="team-card">
+                        <div class="team-image">
+                            <div class="image-placeholder">👨‍🏫</div>
+                        </div>
+                        <h3>Mentor Name 3</h3>
+                        <p class="team-role">Specialization 3</p>
+                        <p class="team-bio">Short description about mentor 3</p>
+                        <p class="team-contact">📧 mentor3@culko.in</p>
+                    </div>
+
+                    <!-- Mentor 4 -->
+                    <div class="team-card">
+                        <div class="team-image">
+                            <div class="image-placeholder">👩‍🏫</div>
+                        </div>
+                        <h3>Mentor Name 4</h3>
+                        <p class="team-role">Specialization 4</p>
+                        <p class="team-bio">Short description about mentor 4</p>
+                        <p class="team-contact">📧 mentor4@culko.in</p>
+                    </div>
+
+                    <!-- Mentor 5 -->
+                    <div class="team-card">
+                        <div class="team-image">
+                            <div class="image-placeholder">👨‍🏫</div>
+                        </div>
+                        <h3>Mentor Name 5</h3>
+                        <p class="team-role">Specialization 5</p>
+                        <p class="team-bio">Short description about mentor 5</p>
+                        <p class="team-contact">📧 mentor5@culko.in</p>
+                    </div>
+                </div>
+            </div>
+
             <!-- Leadership -->
             <div class="team-category">
                 <h2>Leadership</h2>
