--- a/team.html
+++ b/team.html
@@ -48,10 +48,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👨‍🏫</div>
                         </div>
-                        <h3>Mentor Name 1</h3>
+                        <h3>Dr. Amit Kumar Mishra</h3>
                         <p class="team-role">Specialization 1</p>
-                        <p class="team-bio">Short description about mentor 1</p>
-                        <p class="team-contact">📧 mentor1@culko.in</p>
+                        <p class="team-bio">Coordinator 1</p>
+                        <p class="team-contact">E-mail: amit.l100264@culko.in</p>
                     </div>
 
                     <!-- Mentor 2 -->
