--- a/team.html
+++ b/team.html
@@ -51,7 +51,7 @@
                         <h3>Dr. Amit Kumar Mishra</h3>
                         <p class="team-role">Specialization 1</p>
                         <p class="team-bio">Coordinator 1</p>
-                        <p class="team-contact">E-mail: amit.l100264@culko.in</p>
+                        <p class="team-contact">📧 amit.l100264@culko.in</p>
                     </div>
 
                     <!-- Mentor 2 -->
@@ -59,10 +59,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👩‍🏫</div>
                         </div>
-                        <h3>Mentor Name 2</h3>
+                        <h3>Dr. Manisha Jain</h3>
                         <p class="team-role">Specialization 2</p>
-                        <p class="team-bio">Short description about mentor 2</p>
-                        <p class="team-contact">📧 mentor2@culko.in</p>
+                        <p class="team-bio">Assistant Professor</p>
+                        <p class="team-contact">📧 manisha.l100409@culko.in</p>
                     </div>
 
                     <!-- Mentor 3 -->
@@ -70,10 +70,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👨‍🏫</div>
                         </div>
-                        <h3>Mentor Name 3</h3>
+                        <h3>Dr. Vikash Mishra</h3>
                         <p class="team-role">Specialization 3</p>
-                        <p class="team-bio">Short description about mentor 3</p>
-                        <p class="team-contact">📧 mentor3@culko.in</p>
+                        <p class="team-bio">Co-Coordinator</p>
+                        <p class="team-contact">📧 vikash.l100357@culko.in</p>
                     </div>
 
                     <!-- Mentor 4 -->
