--- a/team.html
+++ b/team.html
@@ -131,10 +131,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👨‍🔬</div>
                         </div>
-                        <h3>Manish Kumar</h3>
+                        <h3>Akshara Bajpai</h3>
                         <p class="team-role">Technical Head</p>
-                        <p class="team-bio">[about technical head]</p>
-                        <p class="team-contact">📧 technicalhead@culko.in</p>
+                        <p class="team-bio">Btech IT</p>
+                        <p class="team-contact">📧 aksharabajpai2@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -148,10 +148,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👩‍💼</div>
                         </div>
-                        <h3>abc</h3>
-                        <p class="team-role">Events Coordinator</p>
+                        <h3>Paras tiwari</h3>
+                        <p class="team-role">Core Member</p>
                         <p class="team-bio">Manages workshops, hackathons, and all club events.</p>
-                        <p class="team-contact">📧 abc@cuculkomail.in</p>
+                        <p class="team-contact">📧 Parastiwari264@gmail.com</p>
                     </div>
 
                     <!-- Coordinator 2 -->
@@ -159,10 +159,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👨‍💻</div>
                         </div>
-                        <h3>opq</h3>
-                        <p class="team-role">Projects Coordinator</p>
-                        <p class="team-bio">Oversees ongoing projects and facilitates collaboration.</p>
-                        <p class="team-contact">📧 opq@cuculkomail.in</p>
+                        <h3>Kishan Verma </h3>
+                        <p class="team-role">Social Media Manager</p>
+                        <p class="team-bio">Covers all events  and facilitates collaboration Manages Our Social Media handles.</p>
+                        <p class="team-contact">📧 vermakishan478@gmail.com</p>
                     </div>
 
                     <!-- Coordinator 3 -->
@@ -170,8 +170,8 @@
                         <div class="team-image">
                             <div class="image-placeholder">👩‍🎓</div>
                         </div>
-                        <h3>xyz</h3>
-                        <p class="team-role">Head Coordinator</p>
+                        <h3>Aadya Gupta </h3>
+                        <p class="team-role">Core Member</p>
                         <p class="team-bio">[about head coordinator]</p>
                         <p class="team-contact">📧 headcoordinator@culko.in</p>
                     </div>
@@ -181,9 +181,9 @@
                         <div class="team-image">
                             <div class="image-placeholder">👨‍🏫</div>
                         </div>
-                        <h3>abc</h3>
-                        <p class="team-role">Mentorship Coordinator</p>
-                        <p class="team-bio">[about mentorship coordinator]</p>
+                        <h3>Mohd humza</h3>
+                        <p class="team-role">Core Member</p>
+                        <p class="team-bio">Btech CSE CORE Sec-E</p>
                         <p class="team-contact">📧 mentorshipcoordinator@culko.in</p>
                     </div>
 
@@ -192,7 +192,7 @@
                         <div class="team-image">
                             <div class="image-placeholder">👩‍💻</div>
                         </div>
-                        <h3>kbc</h3>
+                        <h3>Mantra Shukla </h3>
                         <p class="team-role">Event Leader</p>
                         <p class="team-bio">[about event leader]</p>
                         <p class="team-contact">📧 eventleader@culko.in</p>
