--- a/team.html
+++ b/team.html
@@ -49,8 +49,8 @@
                             <div class="image-placeholder">👨‍🏫</div>
                         </div>
                         <h3>Dr. Amit Kumar Mishra</h3>
-                        <p class="team-role">Specialization 1</p>
-                        <p class="team-bio">Coordinator 1</p>
+                        <p class="team-role">Associate Professor</p>
+                        <p class="team-bio">Coordinator</p>
                         <p class="team-contact">📧 amit.l100264@culko.in</p>
                     </div>
 
@@ -59,10 +59,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👩‍🏫</div>
                         </div>
-                        <h3>Dr. Manisha Jain</h3>
-                        <p class="team-role">Specialization 2</p>
-                        <p class="team-bio">Assistant Professor</p>
-                        <p class="team-contact">📧 manisha.l100409@culko.in</p>
+                        <h3>Dr. Vikash Mishra</h3>
+                        <p class="team-role">Associate Professor</p>
+                        <p class="team-bio">Co-Coordinator</p>
+                        <p class="team-contact">vikash.l100357@culko.in</p>
                     </div>
 
                     <!-- Mentor 3 -->
@@ -70,10 +70,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👨‍🏫</div>
                         </div>
-                        <h3>Dr. Vikash Mishra</h3>
-                        <p class="team-role">Specialization 3</p>
+                        <h3>Dr. Manisha Jain</h3>
+                        <p class="team-role">Assistant Professor</p>
                         <p class="team-bio">Co-Coordinator</p>
-                        <p class="team-contact">📧 vikash.l100357@culko.in</p>
+                        <p class="team-contact">📧 manisha.l100409@culko.in</p>
                     </div>
 
                     <!-- Mentor 4 -->
@@ -81,10 +81,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👩‍🏫</div>
                         </div>
-                        <h3>Mentor Name 4</h3>
-                        <p class="team-role">Specialization 4</p>
-                        <p class="team-bio">Short description about mentor 4</p>
-                        <p class="team-contact">📧 mentor4@culko.in</p>
+                        <h3>Ajay Kumar Singh</h3>
+                        <p class="team-role">HOD , SoCE</p>
+                        <p class="team-bio">Chairman</p>
+                        <p class="team-contact">📧 Chairman001@culko.in</p>
                     </div>
 
                     <!-- Mentor 5 -->
@@ -161,7 +161,7 @@
                         </div>
                         <h3>Kishan Verma </h3>
                         <p class="team-role">Social Media Manager</p>
-                        <p class="team-bio">Covers all events  and facilitates collaboration Manages Our Social Media handles.</p>
+                        <p class="team-bio">Btech CSE AIML Sec-2</p>
                         <p class="team-contact">📧 vermakishan478@gmail.com</p>
                     </div>
 
@@ -172,8 +172,8 @@
                         </div>
                         <h3>Aadya Gupta </h3>
                         <p class="team-role">Core Member</p>
-                        <p class="team-bio">[about head coordinator]</p>
-                        <p class="team-contact">📧 headcoordinator@culko.in</p>
+                        <p class="team-bio">Btech CSE CORE Sec-E</p>
+                        <p class="team-contact">📧 aadyagupta1408@gmail.com</p>
                     </div>
 
                     <!-- Coordinator 4 -->
@@ -184,7 +184,7 @@
                         <h3>Mohd humza</h3>
                         <p class="team-role">Core Member</p>
                         <p class="team-bio">Btech CSE CORE Sec-E</p>
-                        <p class="team-contact">📧 mentorshipcoordinator@culko.in</p>
+                        <p class="team-contact">📧25LBCS1305@culkomail.in</p>
                     </div>
 
                     <!-- Coordinator 5 -->
@@ -193,9 +193,9 @@
                             <div class="image-placeholder">👩‍💻</div>
                         </div>
                         <h3>Mantra Shukla </h3>
-                        <p class="team-role">Event Leader</p>
-                        <p class="team-bio">[about event leader]</p>
-                        <p class="team-contact">📧 eventleader@culko.in</p>
+                        <p class="team-role">Core Member</p>
+                        <p class="team-bio">Btech CSE CORE Sec-B</p>
+                        <p class="team-contact">📧 Mantrashukla15@gmail.com</p>
                     </div>
 
                     <!-- Coordinator 6 -->
@@ -203,10 +203,10 @@
                         <div class="team-image">
                             <div class="image-placeholder">👨‍💼</div>
                         </div>
-                        <h3>pqr</h3>
-                        <p class="team-role">xyz Manager</p>
-                        <p class="team-bio">[about xyz manager]</p>
-                        <p class="team-contact">📧 xyzmanager@culko.in</p>
+                        <h3>Ayan Ahmad Khan</h3>
+                        <p class="team-role">Core Member</p>
+                        <p class="team-bio">Btech CSE Sec-5</p>
+                        <p class="team-contact">📧25LBCS1294@culkomail.in</p>
                     </div>
                 </div>
             </div>
