--- a/team.html
+++ b/team.html
@@ -57,7 +57,7 @@
                     <!-- Mentor 2 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👩‍🏫</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Dr. Vikash Mishra</h3>
                         <p class="team-role">Associate Professor</p>
