--- a/team.html
+++ b/team.html
@@ -7,6 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+
+    <style>
+        .team-image img{
+            width:100%;
+            height:100%;
+            object-fit:cover;
+            border-radius:10px;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
