--- a/team.html
+++ b/team.html
@@ -55,7 +55,7 @@
                     <!-- Mentor 1 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👨‍🏫</div>
+                            <div class="image-placeholder"><img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra"></div>
                         </div>
                         <h3>Dr. Amit Kumar Mishra</h3>
                         <p class="team-role">Associate Professor</p>
@@ -77,7 +77,7 @@
                     <!-- Mentor 3 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👨‍🏫</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Dr. Manisha Jain</h3>
                         <p class="team-role">Assistant Professor</p>
@@ -88,7 +88,7 @@
                     <!-- Mentor 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👩‍🏫</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Ajay Kumar Singh</h3>
                         <p class="team-role">HOD , SoCE</p>
@@ -99,7 +99,7 @@
                     <!-- Mentor 5 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👨‍🏫</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Mentor Name 5</h3>
                         <p class="team-role">Specialization 5</p>
@@ -116,7 +116,7 @@
                     <!-- Team Member 1 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👨‍💼</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>ABC</h3>
                         <p class="team-role">President</p>
@@ -127,7 +127,7 @@
                     <!-- Team Member 2 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👩‍💻</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Anjali Sharma</h3>
                         <p class="team-role">Vice President</p>
@@ -138,7 +138,7 @@
                     <!-- Team Member 3 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👨‍🔬</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Akshara Bajpai</h3>
                         <p class="team-role">Technical Head</p>
@@ -155,7 +155,7 @@
                     <!-- Coordinator 1 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👩‍💼</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Paras tiwari</h3>
                         <p class="team-role">Core Member</p>
@@ -166,7 +166,7 @@
                     <!-- Coordinator 2 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👨‍💻</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Kishan Verma </h3>
                         <p class="team-role">Social Media Manager</p>
@@ -177,7 +177,7 @@
                     <!-- Coordinator 3 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👩‍🎓</div>
+                           <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Aadya Gupta </h3>
                         <p class="team-role">Core Member</p>
@@ -188,7 +188,7 @@
                     <!-- Coordinator 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👨‍🏫</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Mohd humza</h3>
                         <p class="team-role">Core Member</p>
@@ -199,7 +199,7 @@
                     <!-- Coordinator 5 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👩‍💻</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Mantra Shukla </h3>
                         <p class="team-role">Core Member</p>
@@ -210,7 +210,7 @@
                     <!-- Coordinator 6 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <div class="image-placeholder">👨‍💼</div>
+                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Ayan Ahmad Khan</h3>
                         <p class="team-role">Core Member</p>
