--- a/team.html
+++ b/team.html
@@ -88,7 +88,7 @@
                     <!-- Mentor 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/Dr_AjayKumarSingh.jpeg" alt="Dr. Ajay kumar Singh">
                         </div>
                         <h3>Ajay Kumar Singh</h3>
                         <p class="team-role">HOD , SoCE</p>
@@ -155,7 +155,7 @@
                     <!-- Coordinator 1 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/ParasTiwari.jpeg" alt="paras tiwari">
                         </div>
                         <h3>Paras tiwari</h3>
                         <p class="team-role">Core Member</p>
@@ -166,7 +166,7 @@
                     <!-- Coordinator 2 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/kishanVerma.jpeg" alt="Dr. Vikash Mishra">
                         </div>
                         <h3>Kishan Verma </h3>
                         <p class="team-role">Social Media Manager</p>
@@ -177,7 +177,7 @@
                     <!-- Coordinator 3 -->
                     <div class="team-card">
                         <div class="team-image">
-                           <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                           <img src="assets/images/logos/AadyaGupta.jpeg" alt="AadyaGupta">
                         </div>
                         <h3>Aadya Gupta </h3>
                         <p class="team-role">Core Member</p>
@@ -188,7 +188,7 @@
                     <!-- Coordinator 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/MohdHumza.jpeg" alt="MohdHumza">
                         </div>
                         <h3>Mohd humza</h3>
                         <p class="team-role">Core Member</p>
@@ -210,7 +210,7 @@
                     <!-- Coordinator 6 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/AyanAhmadKhan.jpeg" alt="AyanAhmadKhan">
                         </div>
                         <h3>Ayan Ahmad Khan</h3>
                         <p class="team-role">Core Member</p>
