--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@
             width:100%;
             height:100%;
             object-fit:cover;
-            border-radius:10px;
+            border-radius:7px;
         }
     </style>
 </head>
@@ -166,7 +166,7 @@
                     <!-- Coordinator 2 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/kishanVerma.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/KishanVerma.jpeg" alt="KishanVerma">
                         </div>
                         <h3>Kishan Verma </h3>
                         <p class="team-role">Social Media Manager</p>
@@ -199,7 +199,7 @@
                     <!-- Coordinator 5 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/MantraShukla.jpeg" alt="MantraShukla">
                         </div>
                         <h3>Mantra Shukla </h3>
                         <p class="team-role">Core Member</p>
@@ -213,7 +213,7 @@
                             <img src="assets/images/logos/AyanAhmadKhan.jpeg" alt="AyanAhmadKhan">
                         </div>
                         <h3>Ayan Ahmad Khan</h3>
-                        <p class="team-role">Core Member</p>
+                        <p class="team-role">Social Media Coordinator</p>
                         <p class="team-bio">Btech CSE Sec-5</p>
                         <p class="team-contact">📧25LBCS1294@culkomail.in</p>
                     </div>
