--- a/team.html
+++ b/team.html
@@ -9,12 +9,19 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
 
     <style>
+
+        .team-image{
+            width:100%;
+            aspect-ratio:3/4;
+            overflow:hidden;
+            border-radius:10px;
+        }
         .team-image img{
             width:100%;
             height:100%;
             object-fit:cover;
             object-position:top;
-            border-radius:7px;
+            border-radius:10px;
         }
     </style>
 </head>
@@ -136,15 +143,28 @@
                         <p class="team-contact">📧 VP123@cuculko.in</p>
                     </div>
 
-                    <!-- Team Member 3 -->
+
+                    <!--Team Member 3 -->
+
+                     <div class="team-card">
+                        <div class="team-image">
+                            <img src="assets/images/logos/AkshraBajpai.jpeg" alt="AkshraBajpai">
+                        </div>
+                        <h3>Akshra Bajpai</h3>
+                        <p class="team-role">Technical Co-Coordinator</p>
+                        <p class="team-bio">BTech IT</p>
+                        <p class="team-contact">📧 aksharabajpai2@gmail.com</p>
+                    </div>
+
+                    <!-- Team Member 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/ParasTiwari.jpeg" alt="Dr. Vikash Mishra">
                         </div>
-                        <h3>Akshara Bajpai</h3>
+                        <h3>Paras Tiwari</h3>
                         <p class="team-role">Technical Head</p>
-                        <p class="team-bio">Btech IT</p>
-                        <p class="team-contact">📧 aksharabajpai2@gmail.com</p>
+                        <p class="team-bio">BTech CSE Sec-A</p>
+                        <p class="team-contact">📧 Parastiwari264@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -156,12 +176,12 @@
                     <!-- Coordinator 1 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/ParasTiwari.jpeg" alt="paras tiwari">
+                            <img src="assets/images/logos/ABC.jpeg" alt="To be Ann..">
                         </div>
-                        <h3>Paras tiwari</h3>
+                        <h3>ABC</h3>
                         <p class="team-role">Core Member</p>
-                        <p class="team-bio">Manages workshops, hackathons, and all club events.</p>
-                        <p class="team-contact">📧 Parastiwari264@gmail.com</p>
+                        <p class="team-bio">abc.</p>
+                        <p class="team-contact">📧 abc264@gmail.com</p>
                     </div>
 
                     <!-- Coordinator 2 -->
