--- a/team.html
+++ b/team.html
@@ -9,12 +9,22 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
 
     <style>
+        .Team-image{
+            width:100px;
+            height:260px;
+            background-color:#f0f0f0;
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            overflow:hidden;
+            border-radius:7px;
+        }
         .team-image img{
             width:100%;
             height:100%;
             object-fit:cover;
             object-position:top;
-            border-radius:10px;
+            border-radius:7px;
         }
     </style>
 </head>
