--- a/team.html
+++ b/team.html
@@ -190,7 +190,7 @@
                     <!-- Coordinator 2 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/KishanVerma.jpeg" alt="KishanVerma">
+                            <img src="assets/images/logos/KishanVerma.jpg" alt="KishanVerma">
                         </div>
                         <h3>Kishan Verma </h3>
                         <p class="team-role">Social Media Manager</p>
