--- a/team.html
+++ b/team.html
@@ -127,23 +127,23 @@
                     <!-- Team Member 1 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/Aradhya.jpeg" alt="President">
                         </div>
-                        <h3>ABC</h3>
+                        <h3>Aaradhya Gupta</h3>
                         <p class="team-role">President</p>
-                        <p class="team-bio">[about president]</p>
-                        <p class="team-contact">📧president@culko.in</p>
+                        <p class="team-bio">BTech CSE Core-</p>
+                        <p class="team-contact">📧Aaradhyagupta2108@gmail.com</p>
                     </div>
 
                     <!-- Team Member 2 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/MayankGautam.jpeg" alt="Vice-Presidend">
                         </div>
-                        <h3>Anjali Sharma</h3>
+                        <h3>Mayank Gautam</h3>
                         <p class="team-role">Vice President</p>
-                        <p class="team-bio">[about vice president]</p>
-                        <p class="team-contact">📧 VP123@cuculko.in</p>
+                        <p class="team-bio">BTech IT</p>
+                        <p class="team-contact">📧onlycash419@gmail.com</p>
                     </div>
 
 
