--- a/team.html
+++ b/team.html
@@ -66,6 +66,20 @@
                     <!-- Mentor 1 -->
                     <div class="team-card">
                         <div class="team-image">
+                            <img src="assets/images/logos/Dr_AjayKumarSingh.jpeg" alt="Dr. Ajay kumar Singh">
+                        </div>
+                        <h3>Ajay Kumar Singh</h3>
+                        <p class="team-role">HOD , SoCE</p>
+                        <p class="team-bio">Chairman</p>
+                        <p class="team-contact">📧 Chairman001@culko.in</p>
+                    </div>
+
+
+                    <!--Mentor 2 -->
+
+                    
+                    <div class="team-card">
+                        <div class="team-image">
                             <div class="image-placeholder"><img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra"></div>
                         </div>
                         <h3>Dr. Amit Kumar Mishra</h3>
@@ -74,7 +88,7 @@
                         <p class="team-contact">📧 amit.l100264@culko.in</p>
                     </div>
 
-                    <!-- Mentor 2 -->
+                    <!-- Mentor 3 -->
                     <div class="team-card">
                         <div class="team-image">
                             <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
@@ -85,7 +99,7 @@
                         <p class="team-contact">vikash.l100357@culko.in</p>
                     </div>
 
-                    <!-- Mentor 3 -->
+                    <!-- Mentor 4 -->
                     <div class="team-card">
                         <div class="team-image">
                             <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
@@ -94,17 +108,6 @@
                         <p class="team-role">Assistant Professor</p>
                         <p class="team-bio">Co-Coordinator</p>
                         <p class="team-contact">📧 manisha.l100409@culko.in</p>
-                    </div>
-
-                    <!-- Mentor 4 -->
-                    <div class="team-card">
-                        <div class="team-image">
-                            <img src="assets/images/logos/Dr_AjayKumarSingh.jpeg" alt="Dr. Ajay kumar Singh">
-                        </div>
-                        <h3>Ajay Kumar Singh</h3>
-                        <p class="team-role">HOD , SoCE</p>
-                        <p class="team-bio">Chairman</p>
-                        <p class="team-contact">📧 Chairman001@culko.in</p>
                     </div>
 
                     <!-- Mentor 5 -->
@@ -162,12 +165,12 @@
                     <!-- Team Member 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/ParasTiwari.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/SampoornTiwari.jpeg" alt="">
                         </div>
-                        <h3>Paras Tiwari</h3>
+                        <h3>Sampoorn Tripathi</h3>
                         <p class="team-role">Technical Head</p>
-                        <p class="team-bio">BTech CSE Sec-A</p>
-                        <p class="team-contact">📧 Parastiwari264@gmail.com</p>
+                        <p class="team-bio">BTech CSE CORE Sec-D</p>
+                        <p class="team-contact">📧 25lbcs1261@culkomail.in</p>
                     </div>
                 </div>
             </div>
@@ -179,12 +182,12 @@
                     <!-- Coordinator 1 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/ABC.jpeg" alt="To be Ann..">
+                            <img src="assets/images/logos/ParasTiwari.jpeg" alt="To be Ann..">
                         </div>
-                        <h3>ABC</h3>
-                        <p class="team-role">Core Member</p>
-                        <p class="team-bio">abc.</p>
-                        <p class="team-contact">📧 abc264@gmail.com</p>
+                        <h3>Paras Tiwari</h3>
+                        <p class="team-role">Technical C0-Coordinator</p>
+                        <p class="team-bio">BTech CSE</p>
+                        <p class="team-contact">📧 Parastiwari@gmail.com/p>
                     </div>
 
                     <!-- Coordinator 2 -->
