--- a/team.html
+++ b/team.html
@@ -165,7 +165,7 @@
                     <!-- Team Member 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/SampoornTiwari.jpeg" alt="">
+                            <img src="assets/images/logos/SampoornTiwari.jpeg" alt="Loading">
                         </div>
                         <h3>Sampoorn Tripathi</h3>
                         <p class="team-role">Technical Head</p>
