--- a/team.html
+++ b/team.html
@@ -165,12 +165,12 @@
                     <!-- Team Member 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/SampoornTiwari.jpeg" alt="Loading">
+                            <img src="assets/images/logos/SampoornTripathi.jpeg" alt="Loading...">
                         </div>
                         <h3>Sampoorn Tripathi</h3>
                         <p class="team-role">Technical Head</p>
                         <p class="team-bio">BTech CSE CORE Sec-D</p>
-                        <p class="team-contact">📧 25lbcs1261@culkomail.in</p>
+                        <p class="team-contact">📧 tripathisampoorn1@gmail.com</p>
                     </div>
                 </div>
             </div>
