--- a/team.html
+++ b/team.html
@@ -102,7 +102,7 @@
                     <!-- Mentor 4 -->
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="assets/images/logos/Dr_VikashMishra.jpeg" alt="Dr. Vikash Mishra">
+                            <img src="assets/images/logos/Dr_ManishaJain.png" alt="Dr. Manisha Jain">
                         </div>
                         <h3>Dr. Manisha Jain</h3>
                         <p class="team-role">Assistant Professor</p>
