--- a/team.html
+++ b/team.html
@@ -275,7 +275,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Us</h4>
-                    <p>Email: codingclub123@culko.in</p>
+                    <p>Email: codingclub@culko.in</p>
                     <p>Campus: Chandigarh University Lucknow UP</p>
                 </div>
             </div>
