--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Us</h4>
-                    <p>Email: codingclub123@culkomail.in</p>
+                    <p>Email: codingclub@culkomail.in</p>
                     <p>Campus: Chandigarh University</p>
                 </div>
             </div>
