--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Us</h4>
-                    <p>Email: codingclub123@culkomail.in</p>
+                    <p>Email: codingclub@culko.in</p>
                     <p>Campus: Chandigarh University</p>
                 </div>
             </div>
